# pkg/handler/user.go
@@ -1,9 +1,12 @@
 package handler
 
 import (
+	"encoding/csv"
 	"fmt"
 	"net/http"
+	"os"
 	"strconv"
+	"user_segmentation"
 
 	"github.com/gin-gonic/gin"
 )
@@ -12,6 +15,8 @@ type userSegments struct {
 	User_id int      `json:"user_id"`
 	Slugs   []string `json:"slugs"`
 }
+
+const usersSegmentsHistoryFile = "usersSegmentsHistory.csv"
 
 func (h *Handler) validateUserIdParam(paramName string, c *gin.Context) (int, bool) {
 	user_id, err := strconv.Atoi(c.Param(paramName))
@@ -202,4 +207,78 @@ func (h *Handler) deleteUserFromSegment(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, statusResponse{"ok"})
+}
+
+func (h *Handler) CSVExport(user_segments_history []user_segmentation.UserSegmentHistory) (*os.File, error) {
+
+	file, err := os.Create(usersSegmentsHistoryFile)
+	if err != nil {
+		return nil, err
+	}
+	defer file.Close()
+
+	writer := csv.NewWriter(file)
+	defer writer.Flush()
+
+	var user_segments_history_csv [][]string
+	for _, row := range user_segments_history {
+		var temp []string
+		temp = append(temp, fmt.Sprint(row.User_id), fmt.Sprint(row.Slug), fmt.Sprint(row.Operation_type), fmt.Sprint(row.Timestamp))
+		user_segments_history_csv = append(user_segments_history_csv, temp)
+	}
+
+	for _, row := range user_segments_history_csv {
+		err = writer.Write(row)
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	return file, nil
+}
+
+// @Summary		Show user segments history
+// @Tags		users
+// @Description	Show user segments history
+// @ID			show-user-segments-history
+// @Accept		json
+// @Produce		text/csv
+// @Success		200 {object} user_segmentation.UserSegmentHistory
+// @Param		year path int true "Operation year"
+// @Param		month path int true "Operation month"
+// @Failure		400 {object} errorResponse
+// @Failure		404 {object} errorResponse
+// @Failure		500 {object} errorResponse
+// @Router		/api/users/show_segments_history/{year}/{month} [get]
+func (h *Handler) showUserSegmentsHistory(c *gin.Context) {
+	month, err := strconv.Atoi(c.Param("month"))
+
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, "Invalid month param")
+		return
+	}
+
+	year, err := strconv.Atoi(c.Param("year"))
+
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, "Invalid year param")
+		return
+	}
+
+	user_segments_history, err := h.services.User.GetSegmentRelationHistory(month, year)
+
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	_, err = h.CSVExport(user_segments_history)
+
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	c.FileAttachment(fmt.Sprintf("./%s", usersSegmentsHistoryFile), usersSegmentsHistoryFile)
+	c.Writer.Header().Set("attachment", fmt.Sprintf("filename=%s", usersSegmentsHistoryFile))
 }
